styles.css
:root{
  --white: #f9faff;
  --platinum: #e3e4e8;
  --windsurfing: #32779b;
  --marina: #5a91c7;
  --onyx: #3c3d44;
  --black:#171321;
  --dkblue:#0d314b;
  --hotmag:#ff17e4;
  --magenta:#e310cb;
  --ld-bkgd:light-dark(var(--platinum), var(--black));
  --ld-text:light-dark(var(--onyx), var(--white));
  --ld-projects:light-dark(var(--windsurfing), var(--dkblue));
  --ld-projects-color:light-dark(var(--black),var(--white));
  --ld-blue:light-dark(var(--marina), var(--windsurfing));
  --ld-borders:light-dark(var(--black),var(--magenta));
  --ld-color-nav:light-dark(var(--windsurfing),var(--white));
  --ld-color-ft:light-dark(#fbfcff,#211b2f);
  --ld-color-form:light-dark(var(--white), var(--dkblue));
  --corners:24px 0;
  --base-font-size:1rem;
  --mono:"Oxygen mono", monospace;
  --sans:Oxygen, sans-serif;
}

html{
    box-sizing: border-box;
}
*,*::before,*::after{
    box-sizing: inherit;
}
body{
    font-size: var(--base-font-size);
    font-family:var(--sans);
    background-color: var(--ld-bkgd);
    color: var(--ld-text);
}
.wrapper{
    max-width:1200px;
    margin:0 auto;
    padding: 1rem;
}
img{
    max-width: 100%;
    border-radius: var(--corners);
    border-right:1px solid var(--magenta);
    border-top: 1px solid var(--magenta);
    padding:1rem;
}
h1,h2, h3{
    margin: 0;
    padding: 0;
}

h1{
    font-size: calc(var(--base-font-size) *2.9);
}
p{
    line-height: 1.5;
}

a{
  color:var(--magenta);
}

a:hover{
  color:var(--hotmag);
    text-decoration: none;
}

#intro{
    display:grid;
    grid-template-columns:1fr;
    gap: 2rem;
    text-align: center;
}

nav {
    font-size: 90%;
    font-family: var(--mono);
}

nav ul{
    margin:0;
    padding: 0;
    list-style-type: none;
    display:flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}



nav a{
    color:var(--ld-color-nav);
    text-decoration: none;
    display: block;
}

nav a:hover{
    color: var(--magenta);
}

.button{
    background-color: var(--magenta);
    color: white;
    padding: 0.5rem;
    border-radius: 5px 0;
    font-family: var(--mono);

}

.button:hover{
    color: white;
    background-color: var(--hotmag);
}

/* projects section  */

#projects{
    padding:1rem;
}

#projects h2{
    font-size:2.5rem;
    margin-bottom:calc(2.5rem * 1.5);

}

#projects h3{
    color: var(--ld-blue);
}

#projects h4{
    font-size: var(--base-font-size);
    font-family: var(--mono);
}

.black-box{
    background-color: var(--ld-projects);
    color: var(--ld-projects-color);
    border-radius:10px;
    line-height: 1.5;
}

#projects ul{
    list-style-type: none;
    margin: 0;
    padding:0;
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
    gap: 1rem;
    font-size: var(--base-font-size);
}

#projects img{
    margin: 2rem 0 4rem 0;
}

/* about section */

#about{
  text-align: center;
}

.about-text {
  color: var(--ld-text);
  line-height: 1.5;
  display: grid;
  grid-template-columns: 1fr;
  gap: 2rem;
}

.about-text h3 {
  font-size: calc(var(--base-font-size) * 0.85);
}

.about-text-box ul {
  font-size: calc(var(--base-font-size) * 0.5);
  font-weight:bold;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.about-text-box li {
  line-height: 2;
  font-size: calc(var(--base-font-size)*0.8);
  font-weight: bold;
  color: var(--magenta);
}

.h2-about {
  margin: 2rem 0;
}

/* contact section */


#contact{
  text-align: center;
}
form {
    grid-column:6/11;
    background-color:var(--ld-color-form);
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 50px;
}
  
  #contact input, textarea {
    width: 100%;
    padding: 10px;
    margin: 5px 0;
    border-radius: 5px;
    border: 1px solid #ddd;
    color: var(--ld-text);
    font-size: calc(var(--base-font-size)*0.8);
  }
  
  #contact input:focus,textarea:focus {
    outline: none;
    border-color: var(--base-font-size);
    box-shadow: 0 0 5px rgba(37, 52, 88, 0.5);
  }

#contact button {
    width:30%;
    margin: 10px auto;
    padding: 10px;
    background-color: var(--windsurfing);
    color: var(--white);
    font-size: 16px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
  }
  
  #contact button:hover {
    background-color: var(--marina);
  }

.icons {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: flex-end;
  gap: 2rem;
}

ul svg {
  width: 36px;
  height: 36px;
}

.social {
  fill: var(--marina);
}

.social:hover {
  fill: var(--windsurfing);
}

  footer{
  background-color:var(--ld-color-ft);
  max-height: 80px;
  position: fixed;
  bottom:0;
  left:0;
  width: 100%;
  z-index: 1000;
  grid-template-columns: 1fr;
  text-align: center;
}
footer h2, p{
  
    margin:5px auto;

}
footer h2{
  font-size: var(--base-font-size);
}

/* resposive layout for bigger screens */

@media (min-width:750px){
    #projects article{
        display: grid;
        grid-template-columns: repeat(10,1fr);
        gap:1rem;
    }
    #projects img{
        grid-column: 1/7;
        grid-row: 1/2;
    }
    .project-text{
        grid-column: 5/11;
        grid-row: 1/2;
        order: 2;
        text-align: right;
    }
    #projects ul{
        justify-content: flex-end;
    }

    #projects .reverse .project-text{
        grid-column: 1/7;
        order: 2;
        text-align: left;
    }
    #projects .reverse img{
        grid-column: 5/11;
    }
    #projects .reverse ul{
        justify-content: flex-start;
    }
}

@media (min-width:850px){
    :root{
        --base-font-size: 1.125rem;
    }
    h1{
       margin-left: -3px; 
    }
    nav{
      position: fixed;
      top: 1rem; 
      width: 100%;
      z-index: 1000;
    }

}

